# thoughts_server

./: .gitignore  Cargo.toml  README.md  TESTING.md  docker-compose.yml  package-lock.json  package.json  server_config.json  update  update.sh  webpack.base.js  webpack.config.js  webpack.production.js
db/: 010_users.sql  012_groups.sql  012_user_data.sql  013_group_users.sql  015_email_verifications.sql  020_permissions.sql  020_user_access.sql  025_user_sessions.sql  026_session_csrf_tokens.sql  027_auth_otp.sql  028_auth_otp_codes.sql  030_entries.sql  032_entry_comments.sql  035_tags.sql  040_entries2tags.sql  045_entry_markers.sql  050_text_entries.sql  052_audio_entries.sql  055_custom_fields.sql  060_global_custom_fields.sql  065_custom_field_entries.sql  Cargo.toml  email_update.sql  entry_markers.sql  main.sql  mood_field_rename.sql
db/migrates/: V1__add_entry_timestamps.sql  V2__audio_entries_mime_and_size.sql
db/src/: error.rs  gen_test.rs  main.rs  migrate.rs  postgres.rs
make_test_data/: Cargo.toml
make_test_data/src/: main.rs
make_user/: Cargo.toml
make_user/src/: main.rs
notes/: notes.txt  permissions.txt  urls.txt
primer/: Cargo.toml
primer/src/: main.rs
scripts/: build_handler_file  make_handler_file  serve_docs  update
src/: config.rs  main.rs  make_admin.rs  make_test_data.rs  server.rs  state.rs  time.rs
src/cli/: error.rs  mod.rs
src/components/: custom_fields.rs  entries.rs  groups.rs  mod.rs
src/config/: error.rs  mod.rs  shapes.rs
src/db/: auth_otp.rs  composed.rs  custom_field_entries.rs  custom_fields.rs  entries.rs  entries2tags.rs  error.rs  groups.rs  mod.rs  mood_entries.rs  mood_fields.rs  permissions.rs  query.rs  tags.rs  text_entries.rs  user_sessions.rs  users.rs  validation.rs
src/db/tables/: audio_entries.rs  auth_otp.rs  custom_field_entries.rs  entries.rs  entry_comments.rs  global_custom_fields.rs  group_users.rs  mod.rs  session_csrf_tokens.rs  tags.rs  user_access.rs  user_data.rs  user_sessions.rs
src/email/: message_body.rs  mod.rs
src/error/: app_main.rs  mod.rs
src/getters/: custom_fields.rs  global_custom_fields.rs  mod.rs
src/handler/: account.rs  auth.rs  backup.rs  email.rs  entries.rs  mod.rs  mood_entries.rs  mood_fields.rs  ping.rs  text_entries.rs  users.rs
src/handler/auth/: change.rs  login.rs  logout.rs  mod.rs  session.rs  verify_email.rs
src/handler/custom_fields/: field_id.rs  mod.rs
src/handler/entries/: entry_id.rs  mod.rs
src/handler/groups/: mod.rs
src/handler/mood_fields/: field_id.rs  mod.rs
src/handler/tags/: mod.rs  tag_id.rs
src/handler/users/: mod.rs
src/json/: entries.rs  mod.rs
src/middleware/: mod.rs
src/net/http/: cookie.rs  error.rs  mod.rs
src/parsing/: mod.rs  url_paths.rs  url_query.rs
src/request/: cookie.rs  from.rs  initiator.rs  mod.rs  url_query.rs
src/response/: error.rs  json.rs  mod.rs
src/routing/: file.rs  json.rs  mod.rs  path.rs  query.rs
src/routing/handler/: account.rs  backup.rs  email.rs  mod.rs  ping.rs
src/security/: assert.rs  initiator.rs  mac.rs  mod.rs  otp.rs  permissions.rs  session.rs
src/state/: db.rs  email.rs  file_serving.rs  mod.rs  security.rs  server_info.rs  storage.rs  template.rs
src/template/: helpers.rs  mod.rs  state.rs
src/util/: file.rs  mod.rs  string.rs  time.rs
static/: runtime.b.js
templates/pages/: index.hbs
tests/: http_api.rs
tests/auth/: password.rs
tests/common/: mod.rs
tests/status/: ping.rs
tlib/: Cargo.toml
tlib/src/: lib.rs
tlib/src/cli/: error.rs  mod.rs
tlib/src/config/: mod.rs  shapes.rs
tlib/src/db/: audio_entries.rs  composed.rs  custom_field_entries.rs  custom_fields.rs  entries.rs  entries2tags.rs  entry_comments.rs  entry_markers.rs  global_custom_fields.rs  mod.rs  query.rs  session_csrf_tokens.rs  tags.rs  text_entries.rs  user_access.rs  user_data.rs  user_sessions.rs  users.rs  validation.rs
view/: App.tsx  NavSection.tsx  entry.tsx  json.ts  request.ts  time.ts
view/api/: admin_users.ts  admin_users_id.ts  custom_field_entry_types.ts  custom_field_id.ts  custom_field_types.ts  custom_fields.ts  entries.ts  entries_id.ts  index.ts  login.ts  mood_entry_types.ts  mood_field_id.ts  mood_field_types.ts  mood_fields.ts  tags.ts  tags_id.ts  types.ts  users.ts  users_id.ts  users_id_custom_fields.ts  users_id_custom_fields_id.ts  users_id_entries.ts  users_id_entries_id.ts  users_id_mood_fields.ts  users_id_mood_fields_id.ts  users_id_tags.ts  validation.ts
view/apiv2/: types.ts
view/components/: CustomFieldEntryCell.tsx  OverlayedPage.tsx  TimeInput.tsx
view/components/custom_field_entries/: FloatRangeView.tsx  FloatView.tsx  IntegerRangeView.tsx  IntegerView.tsx  TimeRangeView.tsx  TimeView.tsx  index.tsx
view/components/custom_fields/: FloatRangeView.tsx  FloatView.tsx  IntegerRangeView.tsx  IntegerView.tsx  TimeRangeView.tsx  TimeView.tsx  index.tsx
view/components/graphs/: Float.tsx  FloatRange.tsx  Integer.tsx  IntegerRange.tsx  Time.tsx  TimeRange.tsx  getters.ts  index.tsx  markers.tsx  util.ts
view/components/mood_entries/: FloatRangeView.tsx  FloatView.tsx  IntegerRangeView.tsx  IntegerView.tsx  TimeRangeView.tsx  TimeView.tsx  index.tsx
view/components/mood_fields/: FloatRangeView.tsx  FloatView.tsx  IntegerRangeView.tsx  IntegerView.tsx  TimeRangeView.tsx  TimeView.tsx  index.tsx
view/error/: RequestError.ts
view/hooks/: useApp.ts  useLoadEntries.ts  useLoadFields.ts  useOwner.ts
view/redux/: active_user.ts  entries.ts  mood_fields.ts  store.ts
view/redux/slices/: active_user.ts  custom_fields.ts  entries.ts  mood_fields.ts  tags.ts
view/routes/: account.tsx  entries.tsx  mood_fields.tsx  tags.tsx  users.tsx
view/routes/admin/: users.tsx
view/routes/auth/: login.tsx
view/routes/custom_fields/: field_id.tsx  index.tsx
view/routes/entries/: CommandBarView.tsx  GraphView.tsx  TableView.tsx  entry_id.tsx  index.tsx  reducer.ts
view/routes/mood_fields/: field_id.tsx  index.tsx
view/util/: Emitter.ts  ResizeListener.ts  autio.ts  clone.ts  compare.ts  downloadLink.ts  time.ts  url.ts
(+57 files in other folders)
