[package]
name = "thoughts_server"
version = "1.0.0"
authors = ["DAC098 <dac098Git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "tlib",
]

[dependencies]
shape-rs = { git = "https://github.com/dac098/shape-rs" }

# local
tlib = { path = "./tlib" }

# core
futures = { version = "0.3" }
futures-util = { version = "0.3" }

# util
base64 = { version = "0.13.0" }
num_cpus = { version = "1.0" }
lipsum = { version = "0.8.0" }
rand = { version = "0.8.3", features = ["small_rng", "std"] }
regex = { version = "1" }
lazy_static = { version = "1.4.0" }

# database
uuid = { version = "0.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-0_8" , "with-serde_json-1"]}
bb8-postgres = { version = "0.7" }

# security
openssl = { version = "0.10", features = ["v110"]}
rust-argon2 = { version = "0.8" }
sha-1 = { version = "0.9" }

# email
lettre = { version = "0.10.0-rc.2", features = ["tokio1-native-tls", "native-tls"]}
urlencoding = { version = "2.1.0" }

# web-server
actix-web = { version = "4.0.1", features = ["openssl"]}
actix-session = { version = "0.6.2", features = ["cookie-session"] }
actix-files = { version = "0.6.0" }
actix-web-actors = { version = "4.1.0" }
actix-service = { version = "2.0.2" }
actix-multipart = { version = "0.4.0" }

# templating
handlebars = { version = "4.1.2" }

# parsing
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0" }
serde_yaml = { version = "0.8" }
mime = { version = "0.3" }

# logging
log = { version = "0"}
env_logger = { version = "0"}