[package]
name = "thoughts_server"
version = "1.0.0"
authors = ["DAC098 <dac098Git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "tlib"
]

[features]
openssl = ["dep:openssl", "actix-web/openssl"]
rustls = ["dep:rustls", "actix-web/rustls"]

[dependencies]
shape-rs = { git = "https://github.com/dac098/shape-rs" }

# local
tlib = { path = "./tlib" }

# core
futures = { version = "0.3" }
futures-util = { version = "0.3" }
tokio = { version = "1", features = ["sync"] }

# util
base64 = { version = "0.13.0" }
data-encoding = { version = "2.3.2" }
num_cpus = { version = "1.0" }
lipsum = { version = "0.8.0" }
rand = { version = "0.8.3", features = ["small_rng", "std"] }
regex = { version = "1" }
lazy_static = { version = "1.4.0" }

# database
uuid = { version = "0.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-0_8" , "with-serde_json-1"]}
bb8-postgres = { version = "0.7" }

# security
openssl = { version = "0.10", optional = true, features = ["vendored"]}
rustls = { version = "0.20", optional = true }
rust-argon2 = { version = "0.8" }
sha1 = { version = "0.10.5" }
sha2 = { version = "0.10.6" }
sha3 = { version = "0.10.6" }
blake3 = { version = "1.3.1", features = ["traits-preview"] }
hmac = { version = "0.12.1" }

# email
lettre = { version = "0.10.0-rc.2", features = ["tokio1-native-tls", "native-tls"]}
urlencoding = { version = "2.1.0" }

# web-server
actix-web = { version = "4.0.1", features = []}
actix-session = { version = "0.6.2", features = ["cookie-session"] }
actix-files = { version = "0.6.0" }
actix-web-actors = { version = "4.1.0" }
actix-service = { version = "2.0.2" }
actix-multipart = { version = "0.4.0" }

# templating
handlebars = { version = "4.1.2" }

# parsing
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0", features = ["float_roundtrip"] }
serde_yaml = { version = "0.8" }
mime = { version = "0.3" }

# logging
log = { version = "0"}
env_logger = { version = "0"}

[dev-dependencies]
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
