[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8" }
barrel = { version = "0.7.0" }
refinery = { version = "0.8.7", features = ["postgres"] }
postgres = { version = "0.19.4" }
