[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8" }
barrel = { version = "0.7.0" }
refinery = { version = "0.8.7", features = ["postgres"] }
postgres = { version = "0.19.4", features = ["with-chrono-0_4", "with-uuid-0_8", "with-serde_json-1"] }
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.8.3", features = ["small_rng", "std"] }
lipsum = { version = "0.8.0" }
serde_json = { version = "1.0" }
