[package]
name = "make_test_data"
version = "0.1.0"
authors = ["David Cathers <dac098git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tlib = { path = "../tlib" }

serde_json = "1.0"
lipsum = { version = "0.8.0" }
rand = { version = "0.8.3", features = ["small_rng", "std"] }
chrono = { version = "0.4", features = ["serde"] }
postgres = { version = "0.19", features = ["with-chrono-0_4", "with-uuid-0_8", "with-serde_json-1"]}