[package]
name = "make_user"
version = "0.1.0"
authors = ["David Cathers <dac098git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tlib = { path = "../tlib" }

uuid = { version = "0.8", features = ["v4", "serde"] }
postgres = { version = "0.19", features = ["with-chrono-0_4", "with-uuid-0_8", "with-serde_json-1"]}
openssl = { version = "0.10", features = ["v110"]}
rust-argon2 = { version = "0.8" }