[package]
name = "primer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"]}
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-0_8" , "with-serde_json-1"]}
openssl = { version = "0.10", features = ["v110"]}
rust-argon2 = { version = "0.8" }