[package]
name = "tlib"
version = "0.1.0"
authors = ["David Cathers <dac098git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { version = "0" }

serde = { version = "1.0" }
serde_json = { version = "1.0" }
serde_yaml = { version = "0.8" }

num_cpus = { version = "1.0" }

lettre = { version = "0.10.0-rc.2", features = ["tokio1-native-tls", "native-tls"]}

uuid = { version = "0.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-0_8" , "with-serde_json-1"]}